# onionchat

./: .gitignore
client/: dest.py  main.py  routing.py  server_comm.py  settings.json
client/encodersAndDecoders/: AESManager.py  ECCManager.py  EncryptionManager.py  RSAManager.py  utils.py
client/testing/: router_protocol.py
demo/: client.js  communication.html  explanation.html  getpath.html  index.html  main.js  package-lock.json  package.json  roll.html  styles.css
node/: deserializer.go  main.go  serializer.go  settings.json  socketManager.go
node/communicator/: communicator.go
node/deserializer/: deserializer.go
node/encodersAndDecoders/: AESManagaer.go  ECCManager.go  utils.go
node/serializer/: serializer.go
server/: APICommunicator.cpp  APICommunicator.h  CMakeLists.txt  Communicator.cpp  Communicator.h  EncryptionUtils.cpp  EncryptionUtils.h  HandlerStructs.h  IDataBase.cpp  IDataBase.h  IRequestHandler.h  JsonRequestPacketDeserializer.cpp  JsonRequestPacketDeserializer.h  JsonResponsePacketSerializer.cpp  JsonResponsePacketSerializer.h  LoginManager.cpp  LoginManager.h  NodeData.h  NodeRequestHandler.cpp  NodeRequestHandler.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  Server.cpp  Server.h  SqliteDataBase.cpp  SqliteDataBase.h  json.hpp  main.cpp
server/tomersDad/: CMakeLists.txt
server/tomersDad/tomersDad/: CMakeLists.txt  server.h  tomersDad.cpp  tomersDad.h
